--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: url('../img/fondo.jpg') no-repeat center center fixed;
+  background: url('../img/Fondo1.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
