--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,5 @@
 @import url('install.css');
 @import url('footer.css');
 @import url('responsive.css');
+@import url('organizacion.css');
+@import url('desafio.css');
