--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 /* Footer */
 .app-footer {
-  background: var(--dark-color);
+  background: #2E7D32;
   color: var(--text-light);
   text-align: center;
   padding: 1.5rem;
