correccion de error en los estilos, no se actualizaba en git page

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,5 @@
 @import url('responsive.css');
 @import url('organizacion.css');
 @import url('desafio.css');
+@import url('calculadora.css');
+@import url('tips.css');
